<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">People Finder</string>
    <string name="app_description">Find the position of people you are interested in.</string>
    <string name="gps_enabled">GPS enabled</string>
    <string name="need_gps">This app uses GPS, but it\'s disabled; do you want to activate it? It is not mandatory, if you do not turn it on your position will be calculated anyway, even if in a less precise way, using network information.</string>
    <string name="want_gps">Your GPS is disabled, do you want to activate it?</string>
    <string name="your_position">Your position</string>
    <string name="wrong_version">Your app is not up to date, please download the new version.</string>
    <string name="credential_userphone">Your phone number*</string>
    <string name="credential_password">Password*</string>
    <string name="credential_repeat_password">Repeat Password*</string>
    <string name="insert_credential_title">Insert your credentials</string>
    <string name="user_credentials">My account</string>
    <string name="new_user_credentials">New account</string>
    <string name="retrieving_info">I\'m downloading information from server&#8230;</string>
    <string name="action_settings">Settings</string>
    <string name="gps_available">GPS available.</string>
    <string name="gps_out_of_service">GPS out of service</string>
    <string name="gps_temporarily_unavailable">GPS temporarily unavailable</string>
    <string name="gps_disabled">GPS disabled</string>
    <string name="title_activity_credentials">Credentials</string>
    <string name="internet_unavailable">Internet not available</string>
    <string name="verifying_credentials">Checking credentials&#8230;</string>
    <string name="sending_position">I\'m sending your position to: %s</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="login">Login</string>
    <string name="warning_to_user">This app can track your position and send it to other people; each time this happens you\'ll be notified; you\'ll be able to disable this behaviour al all times.</string>
    <string name="no_show_again">Do not show again</string>
    <string name="no_user_in_book">Your user book is empty.</string>
    <string name="balloon_text">Recording time: %1$s\nAddress: %2$s\nUsing GPS: %3$s</string>
    <string name="title_activity_user">User</string>
    <string name="name">Name</string>
    <string name="credential_mail">Mail</string>
    <string name="credential_register">Register&#8230;</string>
    <string name="credentials_descri">Please insert your data; fields marked with * are mandatory; we suggest to insert also your email, we will use it if you forget your password.</string>
    <string name="the_field_s_is_obligatory_">The field \'%s\' is mandatory.</string>
    <string name="passwords_do_not_match_">Passwords do not match.</string>
    <string name="title_activity_accept_connection">Accept connection</string>
    <string name="wants_to_know_your_position_do_you_agree">%s wants to know your position; do you agree?</string>
    <string name="your_request_to_s_has_been_sent">Your request to %s has been sent, you will be notified when it is accepted or refused</string>
    <string name="s_wants_to_know_your_position">%2$s wants to know your position\n%1$s.</string>
    <string name="has_accepted_to_let_you_know_her_his_position">I accepted to send my position to you.</string>
    <string name="has_refused_to_let_you_know_her_his_position">I refused to send my position to you.</string>
    <string name="requested_stop_sending_your_position">I don\'t want to know your position any more, thank you.</string>
    <string name="stopped_sending_her_his_position">I stopped sending my position to you.</string>
    <string name="title_activity_tracked_users">Tracked users</string>
    <string name="you_are_sending_your_position_to_the_following_users">You are sending your position to the listed users; tap an user to disconnect her/him</string>
    <string name="do_you_want_to_stop_tracking_this_user">Do you want %s to stop sending her/his position to you?</string>
    <string name="stop_sending_your_position_to_user">Do you want to stop sending your position to %s?</string>
    <string name="do_you_want_to_stop_tracking_all_users">Disconnect all the users?</string>
    <string name="send_error">Send error: "%s"</string>
    <string name="deleted_messages_on_server_s">Deleted messages on server: %s</string>
    <string name="cannot_get_address">Cannot get address</string>
    <string name="request_user_position">Request position</string>
    <string name="force_get_user_position">Force to obtain position</string>
    <string name="wrong_password_specified_for_user_s">Wrong password specified for user %s</string>
    <string name="title_activity_book">Users Book</string>
    <string name="set_user_password">Insert password for %s</string>
    <string name="users_book">Users book</string>
    <string name="sending_request_">Sending request&#8230;</string>
    <string name="sending_message_">Sending message&#8230;</string>
    <string name="tap_an_user_for_message">Tap the user you want to send the message.</string>
    <string name="tap_an_user_for_locate">Tap the user you want to locate.</string>
    <string name="tap_an_user_for_options">Tap an user in the list to see available actions.</string>
    <string name="accept_automatically_position_requests_from_this_user">Always accept requests</string>
    <string name="warning_auto_accept">%s can now know your position without the need for you to accept.</string>
    <string name="send_message">Send message</string>
    <string name="write_your_message">Write your message</string>
    <string name="you_are_not_logged">You are not logged</string>
    <string name="no_registered_user_to_whom_send_your_message">No registered user to send your message to</string>
    <string name="_s_says">Message from %1$s: \'%2$s\'"</string>
    <string name="message_successfully_delivered">Message successfully delivered</string>
    <string name="message_not_delivered_s">Message not delivered: %s</string>
    <string name="error_registering_to_google_play_services_s">Error registering to Google Play Services: \'%s\'. You won\'t be able to receive notifications from other users.</string>
    <string name="no_valid_google_play_services_apk_found">No valid Google Play Services APK found. You won\'t be able to receive notifications from other users.</string>
    <string name="_s_has_already_been_connected">%s is already connected</string>
    <string name="delete_this_message_">Delete this message?</string>
    <string name="close">Close</string>
    <string name="unknown">Unknown</string>
    <string name="me">Me</string>
    <string name="options">Options</string>
    <string name="new_">New&#8230;</string>
    <string name="send">Send</string>
    <string name="remove_all_messages_">Remove all messages?</string>
    <string name="disconnect_all">Disconnect all</string>
    <string name="write_here_your_message_">Write here your message:</string>
    <string name="_s_has_been_added_to_your_users_book">%s has been added to your users book</string>
    <string name="there_are_no_messages">There are no messages</string>
    <string name="saving_user_data_">Saving user data&#8230;</string>
    <string name="refresh">Refresh</string>
    <string name="hello_s_would_you_like_to_install_">Hello %1$s, would you like to install this app:\r\n%2$s\r\nso we can know our mutual position when needed?</string>
    <string name="always_from_this_user">Always accept requests from this user</string>
    <string name="search_user">Search user</string>
    <string name="invite_user">%s has not yet installed this app, would you like ti invite her/him with a SMS?</string>
    <string name="login_label">If you are already registered insert your phone number and password and tap OK, otherwise please tap the register button.</string>
    <string name="show_my_position">Show my position</string>
    <string name="hide_my_position">Hide my position</string>
    <string name="ok">OK</string>
    <string name="accept_only_for_a_limited_period_of_time">Accept only for: </string>
    <string name="minutes">Timeout (minutes)</string>

</resources>