<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AcceptConnectionActivity" >

    <TextView
        android:id="@+id/textViewQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dip"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/buttonNo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/no" />

        <Button
            android:id="@+id/buttonYes"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/yes" />

        <Button
            android:id="@+id/buttonAlways"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/always_from_this_user" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="10dip"
        android:orientation="horizontal" >
  
        <TextView
            android:id="@+id/textViewMinutes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/minutes"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        <EditText
            android:id="@+id/editTextMinutes"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:inputType="number"/>
      

        
    </LinearLayout>

</LinearLayout>